

bin_PROGRAMS=srip

srip_CPPFLAGS=$(GST_CFLAGS) $(DBUS_CFLAGS)
srip_LDFLAGS=$(GST_LIBS) $(DBUS_LIBS)
srip_SOURCES=Mutex.cpp \
            ScopedLock.cpp \
            Time.cpp \
            GLibLogger.cpp \
            GstLogger.cpp \
            PipelineBasic.cpp \
            PulseSource.cpp \
            OutputManager.cpp \
            OutputWav.cpp \
            OutputLame.cpp \
            OutputScopeBasic.cpp \
            DBUSMedia.cpp \
            main.cpp

